nyt-pod-scraper/editor-prompt-tool_eks-main/editor-prompt-tool/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  # namespace: nextjs
  name: editor-prompt-tool
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: editor-prompt-tool
  template:
    metadata:
      labels:
        app.kubernetes.io/name: editor-prompt-tool
      annotations:
        instrumentation.opentelemetry.io/inject-python: "editor-prompt-tool"
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - editor-prompt-tool
      containers:
        - name: editor-prompt-tool
          image: "385562404581.dkr.ecr.eu-west-1.amazonaws.com/editor-prompt-tool:xxxxxx"
          # command: ["java"]
          imagePullPolicy: Always
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 5
            httpGet:
              path: /health
              port: 5000
          readinessProbe:
            initialDelaySeconds: 30
            httpGet:
              path: /health
              port: 5000
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          resources:
            requests:
              memory: 500Mi
              cpu: 500m
            limits:
              memory: 1Gi
      serviceAccountName: editor-prompt-tool
