nyt-pod-scraper/editor-prompt-tool_eks-main/editor-prompt-tool/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  # namespace: nextjs
  name: editor-prompt-tool
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: editor-prompt-tool
